[metadata]
name = scsntilecache
version = 0.0.4
author = Philip Crotwell
author_email = crotwell@seis.sc.edu
description = Very simple map tile cache
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crotwell/scsn_tilecache
project_urls =
    Bug Tracker = https://github.com/crotwell/scsn_tilecache/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  requests
  CherryPy
  python-dateutil
  python-magic
  tomli >= 1.1.0 ; python_version < "3.11"


[options.entry_points]
console_scripts =
  scsntilecache = scsn_tilecache.server:main

[options.packages.find]
where = src
